work on composite product page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,6 +55,8 @@
 @import "components/woocommerce/woocommerce-order-downloads";
 @import "components/woocommerce/woocommerce-resetpassword";
 @import "components/woocommerce/woocommerce-tabs";
+@import "components/woocommerce/wpclever_composite_products_customisations";
+
 
 
 @import "components/gravity-forms/colors";
