--- a/src/scss/components/woocommerce/_ul-products.scss
+++ b/src/scss/components/woocommerce/_ul-products.scss
@@ -1,6 +1,7 @@
+$breakpoint-expand-2: sm; // 2 columns
+$breakpoint-expand-3: md; // 3 columns
+
 ul.products.products.products.products {
-    $breakpoint-expand-2: sm; // 2 columns
-    $breakpoint-expand-3: md; // 3 columns
 
     @extend .row;
 
@@ -14,7 +15,7 @@ ul.products.products.products.products {
     .product {
         @extend .col-12;
         @extend .col-#{$breakpoint-expand-2}-6;
-        @extend .col-#{$breakpoint-expand-3}-3;
+        @extend .col-#{$breakpoint-expand-3}-2;
 
         display: flex;
         flex-direction: column;
@@ -43,10 +44,10 @@ ul.products.products.products.products {
         //     }
         // }
 
-        //4 columns
-        &:nth-child(n+5) {
+        //6 columns
+        &:nth-child(n+7) {
             @include media-breakpoint-up($breakpoint-expand-3) {
-                margin-top: spacer(2);
+                margin-top: spacer(3);
             }
         }
     }
@@ -138,5 +139,17 @@ ul.products.products.products.products {
     .added_to_cart {
         display: table;
         margin: 0 auto;
+    }
+}
+
+
+.related ul.products.products.products.products .product {
+    @extend .col-#{$breakpoint-expand-3}-3;
+
+    // 4 columns
+    &:nth-child(n+5) {
+        @include media-breakpoint-up($breakpoint-expand-3) {
+            margin-top: spacer(2);
+        }
     }
 }
