--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -56,6 +56,7 @@
 @import "components/woocommerce/woocommerce-resetpassword";
 @import "components/woocommerce/woocommerce-tabs";
 @import "components/woocommerce/wpclever_composite_products_customisations";
+@import "components/woocommerce/wp-block-woocommerce-coming-soon";
 
 
 
