--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,6 +39,7 @@
 @import "components/woocommerce/cart-collaterals";
 @import "components/woocommerce/checkout-button";
 @import "components/woocommerce/product";
+@import "components/woocommerce/payment";
 @import "components/woocommerce/resets";
 @import "components/woocommerce/single-product";
 @import "components/woocommerce/ul-products";
